--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pool = "proxy.txt" # 代理池
 update = true # 自动更新凭据
 force_refresh_token = true # 强制刷新Token
 account = """
-username=22娘;password=GodKnows;
+username=18945181246;password=m0929526;
 username=33娘;password=GodKnows;
 """
 # 请在上方填写您的账号凭据, 每一条凭据应至少包含下述三种身份校验方式之一的完整键值对:
